# PDFNetra

./: .replit  base.html  gemini_client.py  image_processor.py  index.html  pdf_ocr.py  pyproject.toml  render.yaml  requirements.txt  utils.py  web_app.py
attached_assets/: Practice MLT questions _ 2024 Oct27_ IIT M AN EXAM QDD2 - QuizPractice.space_ocred-merged(2).md  Practice MLT questions _ 2024 Oct27_ IIT M AN EXAM QDD2 - QuizPractice.space_ocred.md  Practice MLT questions _ 2024 Oct27_ IIT M AN EXAM QDD2 - QuizPractice.space_ocred_ocred.md
templates/: base.html  index.html
